fix image size on smaller screens test-1

--- a/_mixins.scss
+++ b/_mixins.scss
@@ -24,3 +24,44 @@
     @content;
   }
 }
+
+@mixin hamburger(
+  $hamburger-width,
+  $hamburger-height,
+  $line-height,
+  $hamburger-gap,
+  $line-color,
+  $gap-color
+) {
+  .hamburger {
+    width: $hamburger-width;
+    height: $hamburger-height;
+    display: flex;
+    flex-direction: column;
+    gap: $hamburger-gap;
+    background-color: $gap-color;
+
+    .line {
+      width: 100%;
+      height: $line-height;
+      background-color: $line-color;
+      transition: all 0.3s ease;
+    }
+
+    &:hover,
+    &.active {
+      .line-1 {
+        transform: translateY($line-height + $hamburger-gap) rotate(45deg);
+      }
+
+      .line-2 {
+        opacity: 0;
+        transform: scale(0.5);
+      }
+
+      .line-3 {
+        transform: translateY(-($line-height + $hamburger-gap)) rotate(-45deg);
+      }
+    }
+  }
+}
