--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@
     display: none;
   }
 
-  @media (max-width: 320px) {
+  @media (max-width: 359px) {
     gap: 10%;
   }
 
@@ -74,19 +74,11 @@
         font-size: 0.7rem;
       }
 
-      .hamburger {
-        cursor: pointer;
-        width: 20px;
-        height: 20px;
-        background-color: white;
-        // @include flex-center(column);
-        // gap: 0.2rem;
+      @include hamburger(22px, 20px, 4px, 4px, white, #004880);
 
-        // .line {
-        //   width: 1rem;
-        //   height: 1rem;
-        //   background-color: white;
-        // }
+      @media (max-width: 359px) {
+        padding: 0.5rem;
+        gap: 0.8rem;
       }
     }
   }
@@ -494,7 +486,12 @@
         background-image:
           linear-gradient(rgba(255, 255, 255, 0) 53%, rgb(0, 47, 82) 80%),
           url(https://jayant061.github.io/ecb-homepage/images/card-1.png);
+
         object-fit: cover;
+
+        &:hover {
+          transform: scale(1.03);
+        }
 
         .video-btn {
           background-color: #ee393f;
